<?xml version="1.0" encoding="utf-8"?><!-- Root layout for the HomeFragment -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.home.HomeFragment">

    <!-- MapView to display the map -->
    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/map_content_description"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Button to add a new report -->

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/buttonAddReportHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="80dp"
        android:clickable="true"
        android:contentDescription="@string/add_report_button_content_description"
        android:text="@string/add"
        app:icon="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="@+id/mapView"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="24dp"
        app:useCompatPadding="false" />

    <!-- Button to center the map on the user's location -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonCenterMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="80dp"
        android:clickable="true"
        android:contentDescription="@string/add_report_button_content_description"
        android:src="@android:drawable/ic_menu_mylocation"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@+id/mapView"
        app:layout_constraintEnd_toEndOf="parent"
        app:useCompatPadding="false" />

    <!-- ProgressBar to indicate loading state -->

    <ProgressBar
        android:id="@+id/progressBarHome"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/buttonRefreshHome"
        app:layout_constraintEnd_toEndOf="@+id/buttonRefreshHome"
        app:layout_constraintStart_toStartOf="@+id/buttonRefreshHome"
        app:layout_constraintTop_toTopOf="@+id/buttonRefreshHome" />

    <!-- Button to refresh the map data -->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/buttonRefreshHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:clickable="true"
        android:contentDescription="@string/center_map_button_content_description"
        android:src="@android:drawable/ic_popup_sync"
        app:backgroundTint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/buttonCenterMap"
        app:layout_constraintEnd_toEndOf="@+id/buttonCenterMap"
        app:layout_constraintStart_toStartOf="@+id/buttonCenterMap" />

</androidx.constraintlayout.widget.ConstraintLayout>